# VMEX

./: .gitignore  CHANGELOG.md  README.md  discrete_adjoint_2506_plan.md  plan.md  plan_differentiability.md  plan_freeb.md  plan_mirror.md  plan_pre_vmex.md  plan_research_grade_performance_differentiability.md  pyproject.toml  setup.py
benchmarks/: baseline.json  cold_start.json  device_parity.py  free_boundary_essos_beta.json  free_boundary_single_stage.json  free_boundary_surface_fields.json  free_boundary_tokamak_coil_parity.json  freeboundary_multigrid.json  make_readme_figures.py  mirror_fixed_boundary.json  mirror_fixed_boundary_3d.json  mirror_fixed_boundary_implicit.json  mirror_free_boundary_anisotropic.json  mirror_free_boundary_axisymmetric.json  mirror_free_boundary_implicit.json  mirror_free_boundary_nonaxisymmetric.json  mirror_hybrid_balanced_continuation.json  mirror_hybrid_fixed_boundary.json  mirror_hybrid_free_boundary.json  mirror_m10_audit.json  mirror_performance.json  mirror_spline_fixed_boundary.json  mirror_spline_nonaxisymmetric.json  production_gpu_2026-07-12.json  profile_cold_start.py  profile_high_resolution.py  profile_production.py  run_baseline.py  run_freeboundary_multigrid.py  run_gpu_matrix.py  run_mirror_exterior_endpoints.py
docs/: accelerated_merge_readiness.rst  algorithms.rst  architecture.rst  bootstrap_current_fixed_point.rst  cli.rst  code_structure.rst  conf.py  confinement.rst  contributing.rst  equations.rst  free_boundary_coil_optimization.rst  free_boundary_plan.rst  functionality_matrix.rst  glossary.rst  index.rst  index_fast.rst  input_reference.rst  installation.rst  jxbforce_mercier.rst  mirror_geometry.rst  objectives.rst  optimization.rst  optimization_sweep_results.rst  optional_validation_plan.rst  performance.rst  quickstart.rst  references.rst  release_checklist.rst  simsopt_comparison.rst  testing_strategy.rst  theory.rst  tutorials.rst  validation.rst  vmec2000_compatibility.rst  wout_reference.rst
examples/: README.md  bootstrap_current_fixed_point.py  finite_beta_scan.py  fixed_boundary_run.py  free_boundary_beta_scan.py  free_boundary_essos_coils.py  free_boundary_essos_coils_beta_scan.py  free_boundary_essos_coils_forward.py  free_boundary_essos_example_common.py  free_boundary_mgrid.py  free_boundary_tokamak_coils.py  hot_restart_scan.py  mirror_finite_current_pitch.py  mirror_fixed_boundary_gradients.py  mirror_fixed_boundary_nonaxisymmetric.py  mirror_fixed_boundary_solve_diagnostic.py  mirror_free_boundary_beta_scan.py  mirror_free_boundary_circular_coils.py  mirror_free_boundary_vector_ls_benchmark.py  (+24 more)
(+880 files in other folders)
